# catkin_backup

./: README.md  copy_bin_lib.sh  cvd_toon_gvars.sh
src/apps/: CMakeLists.txt  DEADJOE  Makefile  calibrate.cpp  censusfeature.cpp  cmake_install.cmake  conv_kitti.py  convertcapture.cpp~  convertcolor.cpp  evalfeature.cpp  extractframes.cpp~  manifest.xml~  package.xml  pointstf.cpp  rawconv.cpp~  rectify.cpp  rotation_test.cpp  stereo.cpp
src/apps/.svn/: entries
src/apps/.svn/text-base/: CMakeLists.txt.svn-base  calibrate.cpp.svn-base  conv_rawseeds.py.svn-base  convertcapture.cpp.svn-base  evaloctomap.cpp.svn-base  evalstereo.cpp.svn-base  feature.cpp.svn-base  mainpage.dox.svn-base  manifest.xml.svn-base  rawconv.cpp.svn-base
src/apps/.svn/tmp/: evalfeature.cpp.tmp  feature.cpp.tmp  tempfile.tmp
src/libks/: CMakeLists.txt~  FindFLYCAP.cmake~  common.cmake~  mainpage.dox  package.xml
src/libks/_msg/.svn/: entries
src/libks/_msg/.svn/text-base/: ImageSet.msg.svn-base
src/libks/_msg_gen/cpp/include/libks/: ImageSet.h  MultiCameraImage.h  SharedImageSet.h
src/libks/_msg_gen/lisp/: ImageSet.lisp  MultiCameraImage.lisp  SharedImageSet.lisp  _package.lisp  _package_ImageSet.lisp  _package_MultiCameraImage.lisp  _package_SharedImageSet.lisp  libks-msg.asd
src/libks/libks/: CMakeLists.txt
src/libks/libks/base/: argvconverter.cpp  argvconverter.h  basewindow.h  crashguard.cpp  crashguard.h  cvwindow.cpp  cvwindow.h  dependentsharedptr.h  exception.h  hammingdistance.cpp  hammingdistance.h  projection.h  sdlwindow.cpp  sdlwindow.h  simd.cpp  simd.h  subpixelinterpolation.h  taitbryan.h  timer.cpp  timer.h  typesequal.h
src/libks/libks/feature/: censusfeature.cpp  censusfeature.h  extendedfast.cpp  extendedfast.h  extendedfast2.cpp  extendedfast2.h  extendedfast2.h.intel  extendedfast3.cpp  extendedfast3.h  fakefast.cpp  fakefast.h  fast9-inl.h  fast9.h  faster-dummy.cpp  faster.cpp  faster.h  featurereducer.cpp  featurereducer.h  featuretester.h  harris.cpp  harris.h  patch_exfast.sh  patch_fast.sh  pyramidrangedetector.cpp  pyramidrangedetector.h  ssefast-inl.h  ssefast-inl.h.intel  ssefast.cpp  ssefast.cpp.bak  ssefast.cpp.intel  ssefast.h
src/libks/libks/feature/evaluation/: clusterevaluation.cpp  clusterevaluation.h  gauglitztruth.h  repeatabilityevaluation.cpp  repeatabilityevaluation.h
src/libks/libks/imageio/: filequeue.cpp  filequeue.h  flycapqueue.cpp  flycapqueue.h  imagequeue.cpp  imagequeue.h  rawimage.cpp  rawimage.h  rawsequence.cpp  rawsequence.h  rosqueue.cpp  rosqueue.h  sharedimagesetpublisher.cpp  sharedimagesetpublisher.h  tvrawimageio.cpp  tvrawimageio.h
src/libks/libks/imageproc/: bilinearinterpolation.h  census-inl.h  census.cpp  census.cpp.old  census.h  colorcoder.cpp  colorcoder.h  imageconversion.cpp  imageconversion.h  localcontrastfilter.h  noiserobustcensus.cpp  noiserobustcensus.h
src/libks/libks/plane/: groundplaneransac.cpp  groundplaneransac.h  planeesmestimator.cpp  planeesmestimator.h
src/libks/libks/stereo/: cameracalibration.cpp  cameracalibration.h  stereorectification.cpp  stereorectification.h
src/libks/libks/stereo/correlation/: censuswindow-inl.h  censuswindow.h  weightedcensus.h  zsadwindow.h
src/libks/libks/stereo/dense/: cvblockmatch-inl.h  cvblockmatch.h  cvsgm-inl.h  cvsgm.h  densestereoalgorithm.h  sparsecompletion.cpp~  sparsecompletion.h  winnertakesall-inl.h  winnertakesall.h
src/libks/libks/stereo/sparse/: densetosparse.h  sparseconstraints.cpp  sparseconstraints.h  sparsecostcube.h  sparseleftdenserightstereo-inl.h  sparseleftdenserightstereo.h  sparsematch.h  sparserectification.cpp  sparserectification.h  sparsestereo-inl.h  sparsestereo.h
src/libks/libks/tests/: CMakeLists.txt  census.cpp  census.h  hammingdistance.h  pyramidrangedetector.cpp  pyramidrangedetector.h  sparsecostcube.cpp  sparsecostcube.h  testrunner.cpp
src/libks/src/libks/msg/: _ImageSet.py  _MultiCameraImage.py  _SharedImageSet.py  __init__.py
src/libks_msgs/: CMakeLists.txt  package.xml~
src/libks_msgs/msg/.svn/text-base/: MultiCameraImage.msg.svn-base
src/nodes/_occupancymap/src/: CMakeLists.txt  ImageSet.h  Makefile  MultiCameraImage.h  SharedImageSet.h  cmake_install.cmake  occupancymapnodelet.h~  octreewrapper.cpp  parameters.cpp  parameters.h  probabilitylookup.cpp  robustoctree.cpp  robustoctree.h  robustoctreenode.cpp  settings.h
src/nodes/_occupancymap/src/.svn/: entries
src/nodes/_occupancymap/src/.svn/text-base/: CMakeLists.txt.svn-base  occprevkeyray.h.svn-base  occupancymapnodelet.cpp.svn-base  occupancymapnodelet.h.svn-base  octreewrapper.h.svn-base  (+5 more)
src/nodes/capture/: CMakeLists.txt  calib_raj.xml  nodelet_plugins.xml  package.xml~
src/nodes/capture/.svn/: entries
src/nodes/capture/.svn/text-base/: CMakeLists.txt.svn-base  mainpage.dox.svn-base  manifest.xml.svn-base
src/nodes/capture/launch/: calibFileDown_19102015.xml  calibFileDown_left_19102015.xml  capture_double_stereo.launch  capture_for_ORB.launch  capture_for_ORB.launch~  capture_stereo.launch  double_stereo.launch  manager_also_stereo.launch  mono.launch  raj_capture_double_stereo.launch  raj_capture_stereo (copy).launch  raj_capture_stereo.launch  stereo_2cam.launch  stereo_2cam_sun.launch  stereo_2cam_sun.launch~  sun_capture_stereo.launch  test.launch~
src/nodes/capture/launch/.svn/: entries
src/nodes/capture/launch/calibrationdata/: ost.txt  ost.txt~  ss
src/nodes/capture/src/: CMakeLists.txt  DEADJOE  Makefile  capturebase.cpp  capturenode.cpp  capturenodelet.cpp  capturenodelet.h  cmake_install.cmake
src/nodes/capture/src/.svn/: entries
src/nodes/capture/src/jellal/: CMakeLists.txt  capturebase.h  raj_capturebase.cpp
src/nodes/occupancymap/: CMakeLists.txt  package.xml
src/nodes/occupancymap/launch/: occupancymap_standalone.launch  occupancymap_standalone_quad.launch
src/nodes/occupancymap/src/: CMakeLists.txt  occprevkeyray.h  occupancymapnodelet.cpp  occupancymapnodelet.h  octreewrapper.h  parameters.cpp  parameters.h  probabilitylookup.cpp  robustoctree.cpp  robustoctree.h  settings.h  visualization.cpp
(+390 files in other folders)
