<package>
  <name>occupancymap</name>
  <version>0.0.1</version>
  <description>occupancymap</description>
  <maintainer email="radouane.ait-jellal@uni-tuebingen.de"> Radouane Ait Jellal</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>libks</build_depend>
  <build_depend>libks_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>octomap_msgs</build_depend>


  <build_depend>pcl_ros</build_depend>
  <run_depend>pcl_ros</run_depend>
  <build_depend>pcl_conversions</build_depend>
  <run_depend>pcl_conversions</run_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>libks</run_depend>
  <run_depend>libks_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>octomap_ros</run_depend>
  <run_depend>octomap</run_depend>
  <run_depend>octomap_msgs</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>



